the second star is mine

--- a/d1/Views/Home/Index.cshtml
+++ b/d1/Views/Home/Index.cshtml
@@ -26,4 +26,6 @@
             </tr>
         }
         </table>
+    <input type="button" value="See all Elves" onclick="location.href='@Url.Action("AllElves", "Home")'" />
+    <input type="button" value="3 Mvps" onclick="location.href='@Url.Action("GetTopThreeElvesWithTheHighestCalories", "Home")'" />
 </div>
